--- a/basic_commands.properties
+++ b/basic_commands.properties
@@ -6,9 +6,9 @@ googlewebcache="https://webcache.googleusercontent.com/search?q=cache:$0
 
 Google="https://www.google.com/search?q=$0
 Bing="https://www.bing.com/search?q=$0
-Yahoo="https://search.yahoo.com/search?q=$0
-Ask.com="http://www.ask.com/web?q=$0
-AOL="http://search.aol.com/aol/search?q=$0
+#Yahoo="https://search.yahoo.com/search?q=$0
+#Ask.com="http://www.ask.com/web?q=$0
+#AOL="http://search.aol.com/aol/search?q=$0
 DuckDuckGo,ddg="https://duckduckgo.com/?q=$0
 Wolfram|Alpha,WolframAlpha="https://www.wolframalpha.com/input/?i=$0
 
